[gd_scene load_steps=9 format=3 uid="uid://bseyjqff8qit4"]

[ext_resource type="Script" path="res://car.gd" id="1_gs001"]
[ext_resource type="Texture2D" uid="uid://qclp8xolmrrd" path="res://graphics/car/main.png" id="2_1n6t6"]
[ext_resource type="Texture2D" uid="uid://drkqkpdol2ukc" path="res://graphics/car/turret.png" id="3_tmmbv"]
[ext_resource type="Texture2D" uid="uid://ccfeb8guwdobn" path="res://graphics/explosions/gun.png" id="4_3eagw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l2yhp"]
size = Vector2(482, 354)

[sub_resource type="CircleShape2D" id="CircleShape2D_ytjln"]
radius = 596.008

[sub_resource type="Animation" id="Animation_sq12g"]
resource_name = "laser_load"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Turret/RayCast2D/Line2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 10.0, 20.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Turret/RayCast2D2/Line2D2:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 10.0, 20.0, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Turret/Nozzlefire:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Turret/Nozzlefire2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bt6q4"]
_data = {
"laser_load": SubResource("Animation_sq12g")
}

[node name="car" type="PathFollow2D"]
script = ExtResource("1_gs001")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
visible = false
position = Vector2(50, 0)
collision_layer = 2
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-53, 0)
shape = SubResource("RectangleShape2D_l2yhp")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(50, 0)
rotation = 1.5708
texture = ExtResource("2_1n6t6")

[node name="Turret" type="Node2D" parent="."]
position = Vector2(-52, 0)

[node name="Sprite2D" type="Sprite2D" parent="Turret"]
position = Vector2(100, 0)
rotation = 1.5708
texture = ExtResource("3_tmmbv")

[node name="RayCast2D" type="RayCast2D" parent="Turret"]
position = Vector2(213, -28)
target_position = Vector2(545, -3)

[node name="Line2D" type="Line2D" parent="Turret/RayCast2D"]
position = Vector2(2, 1)
points = PackedVector2Array(0, -2, 537, -4)
width = 0.0
default_color = Color(1, 0, 0, 0.811765)

[node name="RayCast2D2" type="RayCast2D" parent="Turret"]
position = Vector2(213, 30)
target_position = Vector2(545, -3)

[node name="Line2D2" type="Line2D" parent="Turret/RayCast2D2"]
position = Vector2(1, 2)
points = PackedVector2Array(0, -2, 537, -4)
width = 0.0
default_color = Color(1, 0, 0, 0.811765)

[node name="Nozzlefire" type="Sprite2D" parent="Turret"]
position = Vector2(279, -29)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_3eagw")

[node name="Nozzlefire2" type="Sprite2D" parent="Turret"]
position = Vector2(278, 30)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_3eagw")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(120, 1)
shape = SubResource("CircleShape2D_ytjln")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bt6q4")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
